# AuthGuard

./: README.md  docker-compose.yml  start.sh  test_auth.sh
AuthGuard/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  config.json  docker-compose.yml  instructions.txt  test.sh
AuthGuard/keycloak/: authguard-client.json  groups.json  master-realm.json  realm.json  roles.json
AuthGuard/nginx/: nginx.conf
AuthGuard/nginx/conf.d/: rate-limits.conf  upstreams.conf
AuthGuard/nginx/sites.d/: default.conf
AuthGuard/src/: lib.rs  main.rs  state.rs
AuthGuard/src/auth/: claims.rs  jwt.rs  mod.rs
AuthGuard/src/config/: config.rs  mod.rs
AuthGuard/src/handler/: mod.rs
AuthGuard/src/middleware/: mod.rs  ratelimit.rs  security.rs
AuthGuard/src/observability/: metrics.rs  mod.rs
AuthGuard/src/policy/: mod.rs
AuthGuard/src/proxy/: handler.rs  mod.rs  proxy.rs
AuthGuard/src/routes/: mod.rs
AuthGuard/src/services/: mod.rs  redis.rs
AuthGuard/src/utils/: mod.rs
