[package]
name = "authguard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

redis = { version = "0.23", features = ["tokio-comp"] }

prometheus = "0.13"

tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

dotenv = "0.15"
lazy_static = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

hyper = { version = "0.14", features = ["full"] }