[package]
name = "authguard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"

# TLS via Rust (sem OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.25", features = ["tokio-rustls-comp"] }

# Core HTTP
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Utilitários
prometheus = "0.13"
dotenv = "0.15"
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = "0.3"